Доделал футер и контакты

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -93,7 +93,7 @@
         <button type="button" class="contacts__button-first">
           Our Locations
           <svg class="contacts__button-icon">
-            <use href="./images/sprite.svg#"></use>
+            <use href="./images/sprite.svg#arrow-right"></use>
           </svg>
         </button>
       </li>
@@ -101,7 +101,7 @@
         <button type="button" class="contacts__button-second">
           Franchise
           <svg class="contacts__button-icon">
-            <use href="./images/sprite.svg#"></use>
+            <use href="./images/sprite.svg#arrow-right-red"></use>
           </svg>
         </button>
       </li>
