--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -2,7 +2,6 @@
     background-color: var(--font-secondary-color);
 }
 
-
 @media (min-width: 320px) {
     
 .contacts {
@@ -110,6 +109,11 @@ margin-top: 34px;
     font-size: 16px;
 line-height: 1.3;
 font-weight: 700;
+
+    &:hover,
+    &:focus {
+        background: #C7133E;
+    }
 }
 
 .contacts__button-second {
@@ -124,7 +128,27 @@ font-weight: 700;
     font-size: 16px;
 line-height: 1.3;
 font-weight: 700;
+
+    &:hover,
+    &:focus {
+        background: #ECEBEB;
+    }
 }
+
+.contacts__button-icon {
+    margin-left: 5px;
+    width: 6px;
+    height: 9px;
+    fill: #ffffff;
+}
+
+.contacts__button-item {
+    margin-left: 5px;
+    width: 6px;
+    height: 9px;
+    fill: var(--text-accent-color);
+}
+
 }
 
 @media (min-width: 768px) {
@@ -247,3 +271,4 @@ font-weight: 700;
 
 
 }
+
