--- a/src/sass/layout/_customer_reviews.scss
+++ b/src/sass/layout/_customer_reviews.scss
@@ -1,2 +1,57 @@
-section
-section section.customer-review
+.customer-reviews {
+  background-color: var(--text-main-color);
+  padding-top: 80px;
+  padding-bottom: 86px;
+}
+
+.customer-reviews_img {
+  margin: 0 auto;
+  margin-bottom: 29px;
+}
+
+.customer-reviews__section-text {
+  padding: 43px 66px 26px 57px;
+
+  background-color: var(--font-comments-color);
+
+  //   background-image: repeating-linear-gradient(
+  //     to bottom,
+  //     var(--font-border-color),
+  //     var(--font-border-color)
+  //   );
+  //   //   border-bottom: 1px solid var(--font-border-color);
+
+  //   display: inline;
+  //   background-repeat: no-repeat;
+  //   background-position: center bottom 1px;
+  //   background-size: 100% 3px;
+}
+
+.customer-reviews__text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 2.58;
+  text-align: center;
+  color: var(--text-alt-color);
+
+  //   background-image: repeating-linear-gradient(
+  //     to bottom,
+  //     var(--font-border-color),
+  //     var(--font-border-color)
+  //   );
+  //   border-bottom: 1px solid var(--font-border-color);
+
+  //   display: inline;
+  //   background-repeat: no-repeat;
+  //   background-repeat: repeat-x;
+  //   background-position: center bottom 1px;
+  //   background-size: 100% 3px;
+  //   background-image: linear-gradient(to right, red, blue);
+  background-image: repeating-linear-gradient(
+    to bottom,
+    transparent -10px,
+    transparent 19px,
+    var(--font-border-color) 21px,
+    transparent 20px
+  );
+}
