--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
     <div class="container section--hero__container ">
         <div class="section--hero__box">
             <div class="section--hero__title-box">
-                <h1 class="section-title--hero">Комплексная подготовка к ВНО <br>
+                <h1 class="section-title--hero">Комплексная <br class="section--hero__hidden-br">подготовка к ВНО <br>
                     по английскому языку
                 </h1>
             </div>
@@ -21,7 +21,7 @@
             media="(min-width: 768px)">
             <source srcset="./images/hero/hero-m@1x.png 1x, ./images/hero/hero-m@2x.png 2x"
             media="(max-width: 480px)">
-            <img class="section--hero__main-image" src="./images/hero/hero-m@1x.png" alt="">
+            <img class="section--hero__main-image" src="./images/hero/hero-m@1x.png" alt="Команда работает за столом">
         </picture> 
 
     </div>
