--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,11 +1,15 @@
 .section--hero {
   // max-width: 100%;
-  height: 557px;
+  // height: 557px;
 
   background-image: url('../images/hero/hero-wave-tab@1x.png');
   background-repeat: no-repeat;
-  background-position: 14% 17%;
+  background-position: 14% 47%;
   // background-position: 50% 85%, 45% 81%, 50% 68%;
+
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    height: 570px;
+  }
 }
 
 .section-title--hero {
@@ -52,6 +56,8 @@
   text-transform: uppercase;
   color: $secondary-color;
   background-color: $accent-color;
+
+  cursor: pointer;
 }
 
 .section--hero__bg-image {
@@ -72,11 +78,13 @@
 
   .section-title--hero {
     font-size: 26px;
+    // height: 500px;
   }
 
   .section--hero__main-image {
     max-width: 375px;
     margin-left: 20px;
+    padding-top: 5px;
   }
 
   .section--hero__button {
@@ -85,7 +93,8 @@
   }
 
   .section--hero {
-    background-position: 14% 230%;
+    background-position: 14% 69%;
+    height: 470px;
   }
 }
 
@@ -124,5 +133,18 @@
 
   .section--hero__hidden-br {
     display: none;
+  }
+
+  .section--hero__button {
+    letter-spacing: 0.14em;
+    font-size: 14px;
+    width: 354px;
+    padding: 27px 25px;
+  }
+
+  .section--hero {
+    height: 878px;
+    background-image: url('../images/hero/hero-wave-desk@1x.png');
+    background-position: 59% 250%;
   }
 }
