--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,10 +15,16 @@
             <a class="section--hero__button" href="#form">хочу на бесплатное занятие</a>
         </div>
         <picture>
+            <source srcset="./images/hero/hero-desk@1x.webp 1x, ./images/hero/hero-desk@2x.webp 2x"
+            media="(min-width: 1400px)" type="image/webp">
             <source srcset="./images/hero/hero-desk@1x.png 1x, ./images/hero/hero-desk@2x.png 2x"
             media="(min-width: 1400px)">
+            <source srcset="./images/hero/hero-tab@1x.webp 1x, ./images/hero/hero-tab@2x.webp 2x"
+            media="(min-width: 768px)" type="image/webp">
             <source srcset="./images/hero/hero-tab@1x.png 1x, ./images/hero/hero-tab@2x.png 2x"
             media="(min-width: 768px)">
+            <source srcset="./images/hero/hero-m@1x.webp 1x, ./images/hero/hero-m@2x.webp 2x"
+            media="(min-width: 480px)" type="image/webp">
             <source srcset="./images/hero/hero-m@1x.png 1x, ./images/hero/hero-m@2x.png 2x"
             media="(max-width: 480px)">
             <img class="section--hero__main-image" src="./images/hero/hero-m@1x.png" alt="Команда работает за столом">
