customer-reviews done

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -2,6 +2,8 @@
   background-color: var(--text-main-color);
   padding-top: 121px;
   padding-bottom: 98px;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .products__subtitle {
