--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,35 +3,70 @@
     <div class="container">
         <h2 class="section-title reviews-section__section-title">Отзывы выпускников</h2>
         <div class="reviews-section__box">
-            <picture>
-                <source srcset="./images/reviews/ellipse-8-m.webp 1x, ./images/reviews/ellipse-8-m@2x.webp 2x"
-                media="(max-width: 480px)" type="image/webp">
-                <source srcset="./images/reviews/ellipse-8-m.jpg 1x, ./images/reviews/ellipse-8-m@2x.jpg 2x"
-                media="(max-width: 480px)">
-                <img class="reviews-section__image" src="./images/reviews/ellipse-8-m.jpg" alt="Woman with long hair">
-            </picture>
-            <a class="reviews-section__icon-link" href="">
-                <svg width="30" height="17" class="reviews-section__vk-icon">
-                    <use href="./images/icons.svg#icon-vk" ></use>
-                </svg>
-            </a>
-            <h3 class="reviews-section__title">Тоня Кучеровская</h3>
-            <p class="reviews-section__text-top">Выпуск 2015-го года,  Національний університет біоресурсів 
-                і природокористування України</p>
-            <p class="reviews-section__text-body">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... </p>
-            <a class="reviews-section__read-on-link" href="">Читать дальше</a>
+
+            <div class="reviews-section__hidden-arrow-left">
+                <a href="">
+                    <svg width="25" height="15">
+                        <use href="./images/icons.svg#icon-arrow-left" ></use>
+                    </svg>
+                </a>
+            </div>
+
+            <div class="reviews-section__pictures-box">
+                <picture>
+                    <source srcset="./images/reviews/ellipse-8-d.webp 1x, ./images/reviews/ellipse-8-d@2x.webp 2x"
+                    media="(min-width: 1344px)" type="image/webp">
+                    <source srcset="./images/reviews/ellipse-8-d.jpg 1x, ./images/reviews/ellipse-8-d@2x.jpg 2x"
+                    media="(min-width: 1344px)">
+    
+                    <source srcset="./images/reviews/ellipse-8-d.webp 1x, ./images/reviews/ellipse-8-d@2x.webp 2x"
+                    media="(min-width: 768px)" type="image/webp">
+                    <source srcset="./images/reviews/ellipse-8-d.jpg 1x, ./images/reviews/ellipse-8-d@2x.jpg 2x"
+                    media="(min-width: 768px)">
+    
+                    <source srcset="./images/reviews/ellipse-8-m.webp 1x, ./images/reviews/ellipse-8-m@2x.webp 2x"
+                    media="(max-width: 480px)" type="image/webp">
+                    <source srcset="./images/reviews/ellipse-8-m.jpg 1x, ./images/reviews/ellipse-8-m@2x.jpg 2x"
+                    media="(max-width: 480px)">
+                    <img class="reviews-section__image" src="./images/reviews/ellipse-8-m.jpg" alt="Woman with long hair">
+                </picture>
+    
+                <a class="reviews-section__icon-link" href="">
+                    <svg width="30" height="17" class="reviews-section__vk-icon">
+                        <use href="./images/icons.svg#icon-vk" ></use>
+                    </svg>
+                </a>
+            </div>
+
+            <div class="reviews-section__text-box">
+                <h3 class="reviews-section__title">Тоня Кучеровская</h3>
+                <p class="reviews-section__text-top">Выпуск 2015-го года,  Національний університет біоресурсів 
+                    і природокористування України</p>
+                <p class="reviews-section__text-body">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... 
+                    <span><a class="reviews-section__read-on-link" href="">Читать дальше</a></span>
+                </p>
+                
+            </div>
+
+            <div class="reviews-section__hidden-arrow-right">
+                <a href="">
+                    <svg width="25" height="15">
+                        <use href="./images/icons.svg#icon-arrow-right" ></use>
+                    </svg>
+                </a>
+            </div>
         </div>
 
         
             <ul class="reviews-section__gallery">
-                <li class="reviews-section__list-item">
+                <li class="reviews-section__list-item reviews-section__list-item--hidden-arrow">
                     <a href="">
                         <svg width="25" height="15">
                             <use href="./images/icons.svg#icon-arrow-left" ></use>
                         </svg>
                     </a>
                 </li>
-                <li >
+                <li class="reviews-section__list-item">
                     <a href="">
                         <img 
                             srcset="./images/reviews//ellipse-9.webp 1x, ./images/reviews//ellipse-9@2x.webp 2x" type="image/webp"
@@ -58,7 +93,43 @@
                             alt="Woman with long hair">
                     </a>
                 </li>
-                <li class="reviews-section__list-item">
+                <li class="reviews-section__list-item reviews-section__list-item--hidden-photo">
+                    <a href="">
+                        <img 
+                            srcset="./images/reviews//ellipse-12.webp 1x, ./images/reviews//ellipse-12@2x.webp 2x" type="image/webp"
+                            srcset="./images/reviews//ellipse-12.jpg 1x, ./images/reviews//ellipse-12@2x.jpg 2x"
+                            src="./images/reviews/ellipse-12.jpg" 
+                            alt="Woman with long hair">
+                    </a>
+                </li>
+                <li class="reviews-section__list-item reviews-section__list-item--hidden-photo">
+                    <a href="">
+                        <img 
+                            srcset="./images/reviews//ellipse-13.webp 1x, ./images/reviews//ellipse-13@2x.webp 2x" type="image/webp"
+                            srcset="./images/reviews//ellipse-13.jpg 1x, ./images/reviews//ellipse-13@2x.jpg 2x"
+                            src="./images/reviews/ellipse-13.jpg" 
+                            alt="Woman with long hair">
+                    </a>
+                </li>
+                <li class="reviews-section__list-item reviews-section__list-item--hidden-photo">
+                    <a href="">
+                        <img 
+                            srcset="./images/reviews//ellipse-14.webp 1x, ./images/reviews//ellipse-14@2x.webp 2x" type="image/webp"
+                            srcset="./images/reviews//ellipse-14.jpg 1x, ./images/reviews//ellipse-14@2x.jpg 2x"
+                            src="./images/reviews/ellipse-14.jpg" 
+                            alt="Woman with long hair">
+                    </a>
+                </li>
+                <li class="reviews-section__list-item reviews-section__list-item--hidden-photo">
+                    <a href="">
+                        <img 
+                            srcset="./images/reviews//ellipse-15.webp 1x, ./images/reviews//ellipse-15@2x.webp 2x" type="image/webp"
+                            srcset="./images/reviews//ellipse-15.jpg 1x, ./images/reviews//ellipse-15@2x.jpg 2x"
+                            src="./images/reviews/ellipse-15.jpg" 
+                            alt="Woman with long hair">
+                    </a>
+                </li>
+                <li class="reviews-section__list-item reviews-section__list-item--hidden-arrow">
                     <a href="">
                         <svg width="25" height="15">
                             <use href="./images/icons.svg#icon-arrow-right" width="25"></use>
