Added contacts for mobile
Added arrow svg, changed mobile container, added button component

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,4 +1,141 @@
 .section-contacts {
   padding-bottom: 113px;
-  color: $accent-color;
+
+  background: linear-gradient(to bottom, #ffffff 5.6%, #fff5f6 5.6%, #fff5f6 100%);
 }
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin-bottom: 54px;
+}
+
+.contacts__item {
+  width: 220px;
+  padding: 43px 21px 43px 20px;
+
+  background: $primary-text-color;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+.contacts__category {
+  width: max-content;
+  padding: 0 24px;
+  margin-bottom: 25px;
+
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.34;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: $primary-text-color;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.contacts__category--cafe {
+  background: $secondary-product-bg-color;
+}
+
+.contacts__category--foodtruck {
+  background: $third-product-bg-color;
+}
+
+.contacts__place {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.86;
+  letter-spacing: 0.04em;
+  color: $primary-desc-color;
+
+  margin-bottom: 10px;
+}
+
+.contacts__description {
+  margin-bottom: 25px;
+
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: $secondary-desc-color;
+}
+
+.schedule {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border-top: 1px solid #e1e1e1;
+  border-bottom: 1px solid #e1e1e1;
+  margin-bottom: 25px;
+
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.86;
+}
+.schedule__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.schedule__day {
+  color: $primary-desc-color;
+}
+.schedule__time {
+  color: #ffa5ba;
+}
+
+.address__link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.5;
+  color: $secondary-desc-color;
+}
+
+// Buttons
+.buttons-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.buttons-list__item {
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+// .button__icon {
+//   width: 6px;
+//   height: 10px;
+//   margin-left: 7px;
+// }
+
+// .hero-nav {
+//   display: flex;
+// }
+// .hero-nav__item {
+//   &:not(:last-child) {
+//     margin-right: 15px;
+//   }
+// }
+
+// .products__link {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 40px;
+//   height: 40px;
+//   background-color: $primary-text-color;
+//   border-radius: 50%;
+// }
+
+// .products__icon {
+//   fill: $accent-color;
+// }
