--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -40,9 +40,11 @@ $secondary-product-bg-color: #f0d1a5;
 $third-product-bg-color: #c2e297;
 // Фон третьей карточки товара в секции Products и фон надписи Food track в Contacts
 
-// ============= ЦВЕТА ХОВЕРОВ/ФОКУСОВ КНОПОК ==============
+// ============= ЦВЕТА КНОПОК, ХОВЕРОВ/ФОКУСОВ КНОПОК ==============
 
 $primary-btn-hover: #ecebeb;
 // Цвет ховера/фокуса белой кнопки
+$secondary-btn-color: #d41342;
+// Цвет ховера/фокуса красной кнопки
 $secondary-btn-hover: #c7133e;
 // Цвет ховера/фокуса красной кнопки
