--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,7 +4,7 @@
 
     <ul class="contacts list">
       <li class="contacts__item">
-        <p class="contacts__category">Cafe</p>
+        <p class="contacts__category contacts__category--cafe">Cafe</p>
         <p class="contacts__place">Chicago</p>
         <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
@@ -22,22 +22,105 @@
         <address class="address">
           <ul class="list">
             <li class="address__item">
-              <a class="address__link" href="tel:+610383766284">+61(0) 383 766 284</a>
+              <a class="address__link link" href="tel:+610383766284">+61(0) 383 766 284</a>
             </li>
             <li class="address__item">
-              <a class="address__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+              <a class="address__link link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+            </li>
+          </ul>
+        </address>
+      </li>
+
+      <li class="contacts__item">
+        <p class="contacts__category contacts__category--foodtruck">Foodtruck</p>
+        <p class="contacts__place">Los Angeles</p>
+        <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+        <ul class="schedule list">
+          <li class="schedule__item">
+            <p class="schedule__day">Monday - Friday</p>
+            <p class="schedule__time"><time>06:00 AM</time> - <time>10:00 PM</time></p>
+          </li>
+          <li class="schedule__item">
+            <p class="schedule__day">Saturday - Sunday</p>
+            <p class="schedule__time"><time>08:00 AM</time> - <time>16:00 PM</time></p>
+          </li>
+        </ul>
+
+        <address class="address">
+          <ul class="list">
+            <li class="address__item">
+              <a class="address__link link" href="tel:+610383766284">+61(0) 383 766 284</a>
+            </li>
+            <li class="address__item">
+              <a class="address__link link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+            </li>
+          </ul>
+        </address>
+      </li>
+
+      <li class="contacts__item">
+        <p class="contacts__category contacts__category--cafe">Cafe</p>
+        <p class="contacts__place">New York</p>
+        <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+        <ul class="schedule list">
+          <li class="schedule__item">
+            <p class="schedule__day">Monday - Friday</p>
+            <p class="schedule__time"><time>06:00 AM</time> - <time>10:00 PM</time></p>
+          </li>
+          <li class="schedule__item">
+            <p class="schedule__day">Saturday - Sunday</p>
+            <p class="schedule__time"><time>08:00 AM</time> - <time>16:00 PM</time></p>
+          </li>
+        </ul>
+
+        <address class="address">
+          <ul class="list">
+            <li class="address__item">
+              <a class="address__link link" href="tel:+610383766284">+61(0) 383 766 284</a>
+            </li>
+            <li class="address__item">
+              <a class="address__link link" href="mailto:noreply@envato.com">noreply@envato.com</a>
             </li>
           </ul>
         </address>
       </li>
     </ul>
+
     <ul class="buttons-list list">
       <li class="buttons-list__item">
-        <button type="button" class="button button--secondary"></button>
+        <button type="button" class="button button--arrow-theme-red">
+          Our Locations
+          <svg class="button__icon">
+            <use href="./images/sprite.svg#icon-half-arrow-right-white"></use>
+          </svg>
+        </button>
       </li>
       <li class="buttons-list__item">
-        <button type="button" class="button button--primary"></button>
+        <button type="button" class="button button--arrow-theme-white">
+          Franchise
+          <svg class="button__icon">
+            <use href="./images/sprite.svg#icon-half-arrow-right-red"></use>
+          </svg>
+        </button>
       </li>
     </ul>
+
+    <!-- <ul class="hero-nav list">
+      <li class="hero-nav__item">
+        <a class="button button--theme-red link" href="http://#">Products</a>
+      </li>
+
+      <li class="hero-nav__item">
+        <a class="button button--theme-white link" href="http://#">How it’s made?</a>
+      </li>
+    </ul> -->
+
+    <!-- <a href="" class="products__link">
+      <svg class="products__icon" width="40" height="40">
+        <use href="./images/sprite.svg#arrow-right"></use>
+      </svg>
+    </a> -->
   </div>
 </section>
