--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,11 +1,10 @@
 .container {
-  width: 320px;
   padding: 0 15px;
   margin: 0 auto;
 
-  // @media screen and (min-width: 320px) {
-  //   width: 320px;
-  // }
+  @media screen and (min-width: 320px) {
+    width: 320px;
+  }
 
   @media screen and (min-width: 768px) {
     width: 730px;
