Added tablet and desktop for Contacts section

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -32,7 +32,7 @@
       </li>
 
       <li class="contacts__item">
-        <p class="contacts__category contacts__category--foodtruck">Foodtruck</p>
+        <p class="contacts__category contacts__category--foodtruck">Food Truck</p>
         <p class="contacts__place">Los Angeles</p>
         <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
