added header and hero sections

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,19 +7,19 @@
                 </svg>
             </a>  
             <ul class="navigation__list">
-                <li class="nanigation__item">
+                <li class="navigation__item">
                     <a href="" class="navigation__link">Home</a>
                 </li>
-                <li class="nanigation__item">
+                <li class="navigation__item">
                     <a href="" class="navigation__link">About us</a>
                 </li>
-                <li class="nanigation__item">
+                <li class="navigation__item">
                     <a href="" class="navigation__link">How it’s made?</a>
                 </li>
-                <li class="nanigation__item">
+                <li class="navigation__item">
                     <a href="" class="navigation__link">Our products</a>
                 </li>
-                <li class="nanigation__item">
+                <li class="navigation__item">
                     <a href="" class="navigation__link">Contact</a>
                 </li>
             </ul>            
@@ -30,12 +30,38 @@
             </svg>
         </button>
         <button class="header__btn-buy">Buy now
-            <svg width="10" height="10">
+            <svg class="header__btn-buy-icon" width="10" height="10">
                 <use href="./images/sprite.svg#arrow-right"></use>
             </svg>
         </button>
-        <div>
-            <!-- mobile__menu -->
-        </div> 
+        <!-- <div class="mobile__menu" data menu>
+            <button class="mobile__menu-close-btn" data menu close>
+                <svg class="mobile__menu-close-icon">
+                    <use href="./images/sprite.svg#close-menu"></use>
+                </svg>
+            </button>
+            <button class="mobile__menu__btn-buy">Buy now
+                <svg class="header__btn-buy-icon" width="10" height="10">
+                    <use href="./images/sprite.svg#arrow-right"></use>
+                </svg>
+            </button>
+            <ul class="mobile__menu__list">
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">Home</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">About us</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">How it’s made?</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">Our products</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">Contact</a>
+                </li>
+            </ul>
+        </div>  -->
     </div>
 </header>
