--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,18 +1,44 @@
 <section class="hero">
     <div class="container">
-        <div>
-            <h1 class="hero__title">Ice cream <br /> made with <br /> 
-                <span class="hero__title-accent">passion</span> 
-            </h1>
-            <div class="hero__btn">
-                <button class="hero__btn-products">
-                    <a class="hero__link-products" href="">Products</a>
-                </button>
-                <button class="hero__btn-made">
-                    <a class="hero__link-made" href="">How it’s made?</a>
-                </button>
+        <div class="hero__divs">
+            <div>
+                 <h1 class="hero__title">Ice cream <br /> made with <br /> 
+                     <span class="hero__title-accent">passion</span> 
+                 </h1>
+                 <div class="hero__btn">
+                     <button class="hero__btn-products">
+                         <a class="hero__link-products" href="">Products</a>
+                     </button>
+                     <button class="hero__btn-made">
+                         <a class="hero__link-made" href="">How it’s made?</a>
+                     </button>
+                </div>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <p class="hero__numbers">16</p>
+                        <span class="hero__numbers-discription">cafes</span>
+                    </li>
+                    <li>
+                        <p class="hero__numbers">23</p>
+                        <span class="hero__numbers-discription">food trucks</span>
+                    </li>
+                </ul>
             </div>
         </div>
-
+        <div  class="hero__milk">
+           <ul>
+               <li>
+                    <p class="hero__milk-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+               </li>
+               <li>
+                   <button class="hero__milk-btn">
+                     <img src="./images/tablet/t-hero-arrow-right.png" alt="right arrow">
+                   </button>
+               </li>
+           </ul>   
+        </div>
     </div>
 </section>
+
