--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,14 +1,40 @@
+.hero .container {
+  position: relative;
+  @media screen and (max-width: 767px) {
+    padding-top: 140px;
+    height: 100vh;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    padding-top: 120px;
+    height: 100vh;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-top: 200px;
+    padding-bottom: 30px;
+    height: 100vh;
+  }
+}
+
 .hero__title {
   font-family: Titan One;
   font-style: normal;
   font-weight: normal;
-  font-size: 26px;
   line-height: 1.15;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: var(--text-main-color);
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  @media screen and (max-width: 767px) {
+    font-size: 26px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1279) {
+    font-size: 22px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 38px;
+  }
 }
+
 .hero__title-accent {
   font-family: Titan One;
   font-style: normal;
@@ -17,21 +43,36 @@
   line-height: 96.5%;
   text-transform: uppercase;
   color: var(--text-accent-color);
+  @media screen and (max-width: 767px) {
+    font-size: 48px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1279) {
+    font-size: 34px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 58px;
+  }
 }
-// .hero__btn {
 
-// }
 .hero__btn-products {
   width: 62px;
   height: 24px;
   background: var(--text-accent-color);
   border-radius: 20px;
   border: none;
+  margin-right: 10px;
+  cursor: pointer;
+  @media screen and (min-width: 1280px) {
+    width: 102px;
+    height: 40px;
+  }
+  &:hover {
+    background: #c7133e;
+  }
 }
+
 .hero__link-products {
   font-family: DM Sans;
-  font-style: normal;
-  font-weight: normal;
   font-size: 8px;
   line-height: 1.25;
   color: var(--text-main-color);
@@ -39,18 +80,29 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  @media screen and (min-width: 1280px) {
+    font-size: 14px;
+  }
 }
+
 .hero__btn-made {
   width: 82px;
   height: 24px;
   background: var(--text-main-color);
   border-radius: 20px;
   border: none;
+  cursor: pointer;
+  @media screen and (min-width: 1280px) {
+    width: 138px;
+    height: 40px;
+  }
+  &:hover {
+    color: #c7133e;
+  }
 }
+
 .hero__link-made {
   font-family: DM Sans;
-  font-style: normal;
-  font-weight: normal;
   font-size: 8px;
   line-height: 1.25;
   color: var(--text-accent-color);
@@ -58,4 +110,155 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  @media screen and (min-width: 1280px) {
+    font-size: 14px;
+  }
+}
+
+.hero__milk {
+  font-size: 8px;
+  line-height: 150%;
+  display: flex;
+  align-items: flex-end;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 14px;
+  }
+  @media screen and (min-width: 768px) {
+    &::before {
+      content: url('../images/tablet/tablet-hero-milk.png');
+      margin-top: 20px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    &::before {
+      content: url('../images/desktop/desk-hero-milk.png');
+      margin-top: 20px;
+    }
+  }
+}
+
+.hero__milk-text {
+  width: 115px;
+  margin-bottom: 10px;
+  @media screen and (min-width: 1280px) {
+    width: 200px;
+  }
+}
+
+.hero__milk-btn {
+  background-color: var(--font-primary-color);
+  border: none;
+}
+
+.hero__divs {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hero__numbers {
+  font-family: Titan One;
+  font-size: 28px;
+  line-height: 1.15;
+  text-align: right;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  position: relative;
+  color: var(--text-accent-color);
+  @media screen and (min-width: 1280px) {
+    font-size: 46px;
+  }
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) {
+    &::before {
+      content: url('../images/tablet/t-hero-ellipse.png');
+      position: absolute;
+      top: -15px;
+      right: -5px;
+      z-index: -1;
+    }
+  }
+  @media screen and (min-width: 1280px) {
+    &::before {
+      content: url('../images/desktop/d-hero-ellipse.png');
+      position: absolute;
+      top: -20px;
+      right: -10px;
+      z-index: -1;
+    }
+  }
+}
+
+.hero__numbers-discription {
+  font-family: DM Sans;
+  font-size: 8px;
+  line-height: 1.2;
+  text-align: right;
+  color: var(--text-main-color);
+  @media screen and (min-width: 1280px) {
+    font-size: 14px;
+  }
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .hero {
+    background-image: url('../images/mobile/m-hero-icecream.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .hero {
+    background-image: url('../images/mobile/m-hero-icecream@2x.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .hero {
+    background-image: url('../images/tablet/tablet-hero-girl.png'),
+      url('../images/tablet/t-hero-icecream.png');
+    background-repeat: no-repeat;
+    background-size: 50vh, 85vh;
+    background-position: right bottom, 70% bottom;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .hero {
+    background-image: url('../images/tablet/tablet-hero-girl@2x.png'),
+      url('../images/tablet/t-hero-icecream@2x.png');
+    background-repeat: no-repeat;
+    background-size: 50vh, 85vh;
+    background-position: right bottom, 70% bottom;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: url('../images/desktop/desk-hero-girl.png'),
+      url('../images/desktop/d-hero-icecream.png');
+    background-repeat: no-repeat;
+    background-size: 50vh, 85vh;
+    background-position: right bottom, 70% bottom;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: url('../images/desktop/desk-hero-girl@2x.png'),
+      url('../images/desktop/d-hero-icecream@2x.png');
+    background-repeat: no-repeat;
+    background-size: 50vh, 85vh;
+    background-position: right bottom, 70% bottom;
+  }
 }
