--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -2,10 +2,12 @@
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
+    position: relative;
 }
 
 @media (min-width: 1280px) {
 .container {
     max-width: 1280px;
+    margin: 0 auto;
     }
 }
