Revert "Сделал для мобилки"
This reverts commit 6b1033b0c988091378afca278ba6123a5763b71d.

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -2,27 +2,13 @@
   <div class="container">
     <label class="products-label">
       100% Natural
-      <h2 class="main-title">Products</h2>
+      <h2 class="products">Products</h2>
     </label>
 
-    <ul class="products-list">
-      <li class="products-item-cream">
-        <h3 class="products-title-cream">ICE CREAM</h3>
-        <p class="products-description">
-          Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et. dolore magna aliqua facilisis.
-        </p>
-        <a class="products-link" href="">
-          <img
-            class="products-arrow"
-            src="../src/images/mobile/advantages/m-arrow-point@1x.png"
-            alt="Описание товара"
-          />
-        </a>
-      </li>
-      <li class="products-item-coffee">
-        <h3 class="products-title-coffee">ICE COFFEE</h3>
-        <p class="products-description">
+    <ul>
+      <li>
+        <h3 class="products-title">ICE CREAM</h3>
+        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et. dolore magna aliqua facilisis.
         </p>
@@ -34,9 +20,23 @@
           />
         </a>
       </li>
-      <li class="products-item-milkshakes">
-        <h3 class="products-title-milkshakes">MILKSHAKES</h3>
-        <p class="products-description">
+      <li>
+        <h3 class="products-title">ICE COFFEE</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <a class="products-link" href="">
+          <img
+            class="products-arrow"
+            src="../src/images/mobile/advantages/m-arrow-point@1x.png"
+            alt="Описание товара"
+          />
+        </a>
+      </li>
+      <li>
+        <h3 class="products-title">MILKSHAKES</h3>
+        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et. dolore magna aliqua facilisis.
         </p>
