--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about__section">
     <div class="container container__bg">
         <p class="about__lable">tradition and love </p>
         <h2 class="about__title">how it’s made?</h2>
