--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,4 +1,6 @@
 .about__section {
+
+    max-width: 1280px;
     padding-top: 125px;
     padding-bottom: 39px;
     background-color: var(--font-secondary-color);
