--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,4 +1,205 @@
+.products-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+}
+
+.products-item-cream {
+  border-radius: 24px;
+  background-color: #ffb8ca;
+  width: 210px;
+  width: 100%;
+  margin-bottom: 130px;
+  position: relative;
+}
+
+.products-cream {
+  padding-top: 175px;
+}
+
+.main-title {
+  margin-top: 15px;
+  margin-bottom: 150px;
+}
+
+.products {
+  padding-top: 121px;
+}
+
+.products-label {
+  display: block;
+  color: #ffa5ba;
+  font-family: Titan One;
+  text-align: center;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.16;
+  text-transform: uppercase;
+}
+
+.main-title {
+  color: var(--accent-color);
+  font-size: 34px;
+  line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.products-title-cream {
+  margin-top: 161px;
+  color: var(--primary-white-color);
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.products-title-cream:before {
+  content: '';
+  display: block;
+  position: fixed;
+  background-image: url('../../src/images/mobile/advantages/m-prod-icecream.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 249px;
+  height: 252px;
+  width: 100%;
+  margin: 0 auto;
+
+  position: absolute;
+  bottom: 339px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.products-title-cream:after {
+  content: '';
+  display: block;
+  background-image: url('../../src/images/group.svg');
+  width: 26px;
+  height: 26px;
+  margin: 30px auto;
+  background-repeat: no-repeat;
+}
+
+.products-item-coffee {
+  border-radius: 24px;
+  background-color: var(--background-yellow);
+  width: 210px;
+  width: 100%;
+  margin-bottom: 130px;
+  position: relative;
+}
+
+.products-title-coffee {
+  margin-top: 161px;
+  color: var(--primary-white-color);
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.products-title-coffee:before {
+  content: '';
+  display: block;
+  position: fixed;
+  background-image: url('../../src/images/mobile/advantages/m-prod-coffee.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 249px;
+  height: 252px;
+  width: 100%;
+  margin: 0 auto;
+
+  position: absolute;
+  bottom: 339px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.products-title-coffee:after {
+  content: '';
+  display: block;
+  background-image: url('../../src/images/group.svg');
+  width: 26px;
+  height: 26px;
+  margin: 30px auto;
+  background-repeat: no-repeat;
+}
+
+.products-item-milkshakes {
+  border-radius: 24px;
+  background-color: var(--background-green);
+  width: 210px;
+  width: 100%;
+  margin-bottom: 130px;
+  position: relative;
+}
+
+.products-title-milkshakes {
+  margin-top: 161px;
+  color: var(--primary-white-color);
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.products-title-milkshakes:before {
+  content: '';
+  display: block;
+  position: fixed;
+  background-image: url('../../src/images/mobile/advantages/m-prod-shake.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 249px;
+  height: 252px;
+  width: 100%;
+  margin: 0 auto;
+
+  position: absolute;
+  bottom: 339px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.products-title-milkshakes:after {
+  content: '';
+  display: block;
+  background-image: url('../../src/images/group.svg');
+  width: 26px;
+  height: 26px;
+  margin: 30px auto;
+  background-repeat: no-repeat;
+}
+
 .products-arrow {
   width: 40px;
   height: 40px;
+  margin-bottom: 41px;
+}
+
+.produc-item {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.products-link {
+  display: flex;
+  justify-content: center;
+}
+
+.products-description {
+  margin: 0 auto;
+  margin-bottom: 30px;
+  color: var(--primary-white-color);
+  max-width: 200px;
 }
