chenge on about_subtitle

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -98,7 +98,7 @@ screen and (min-resolution: 2dppx) {
 
 
 
-.about__lable {
+.about__subtitle {
     color: var(--text-alt-accent-color);
     text-transform: uppercase;
 
@@ -113,14 +113,14 @@ screen and (min-resolution: 2dppx) {
 }
 
 @media screen and (min-width:768px) {
-    .about__lable{
+    .about__subtitle{
         font-size: 26px;
         margin-bottom: 16px;
     }
 }
 
 @media screen and (min-width:1280px){
-    .about__lable{
+    .about__subtitle{
         font-size: 30px;
         line-height: 1.13;
     }
