--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,6 @@
 <section class="about__section">
     <div class="container container__bg">
-        <p class="about__lable">tradition and love </p>
+        <label class="_about__subtitle">tradition and love </label>
         <h2 class="about__title">how it’s made?</h2>
         <div class="about__wrapper">
             <div class="about__section-img">
